- Resolved MessageList component UI bug, that misaligned the container on screen resize.

--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,6 @@
   padding: 0;
 }
 
-body {
-  background-color: #0a0a0a;
-}
-
 main {
   margin: auto;
   max-width: 1024px;
